--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,12 @@
 .umi-production
 .umi-test
 .env.local
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
